# DevOps-Course-Workshop-Module-14-Learners

./: README.md
order-processing-app/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  flask_config.py  module-14-deployment-2-replicas.yaml  module-14-deployment-3-replicas.yaml  pyproject.toml  requirements.txt  scheduled_jobs.py  service.yaml
order-processing-app/data/: database.py  order.py
order-processing-app/processing/: canny_edge_detector.py  process_image.py
order-processing-app/python_app/: app.py  flask_config.py  products.py  scheduled_jobs.py
order-processing-app/python_app/data/: database.py  order.py
order-processing-app/python_app/processing/: canny_edge_detector.py  process_image.py
order-processing-app/python_app/utils/: timeit.py
order-processing-app/templates/: layout.html
workshop-helm-chart/: Chart.yaml  values.yaml
workshop-helm-chart/templates/: deployment.yaml  scale_horizontal.yaml  service.yaml
