[tool.poetry]
name = "order-processing-app"
version = "0.1.0"
description = ""
authors = ["DevOps Delivery <devopsdelivery@corndel.com>"]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
python-dotenv = "^0.21.1"
Flask = "^2.2.2"
requests = "^2.28.2"
Flask-SQLAlchemy = "^3.0.3"
pyodbc = "^4.0.35"
pytz = "^2022.7.1"
Pillow = "^9.4.0"
APScheduler = "^3.10.0"
numpy = "^1.24.2"
scipy = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
